# Igra

./: README.md  Space.spec  SpaceWar.spec  main.py  mein.pptx  pyproject.toml  pyrightconfig.json  scores.json
src/: animation.py  bullet.py  buttons.py  core.py  player.py  position.py  settings.py  slider.py  texts.py  typing.py  utils.py
src/enemy/: asteroid.py  core.py  leviathan.py  stormtrooper.py
src/windows/: __init__.py  core.py  game.py  gameover.py  menu.py  pause.py
version_on_Windows/: scores.json
