[tool.poetry]
name = "game_YL"
version = "0.1.0"
description = ""
authors = ["laptop <ilya.kamckine@ya.ru>"]

[tool.poetry.dependencies]
python = "3.10.*"
pygame = "^2.1.2"

[tool.poetry.dev-dependencies]
pyinstaller = "^5.6.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
